crates/service/tests/diagnostics/snapshots/features__diagnostics__subtyping__cont.snap
---
source: crates/service/tests/diagnostics/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 16,
          "character": 13
        },
        "end": {
          "line": 16,
          "character": 17
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `7` doesn't match its super type `$ct1`"
    }
  ]
}
