crates/service/tests/diagnostics/snapshots/features__diagnostics__subtyping__explicit_final_with_super.snap
---
source: crates/service/tests/diagnostics/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 16
        },
        "end": {
          "line": 4,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$s` is final"
    }
  ]
}
