crates/service/tests/diagnostics/snapshots/features__diagnostics__subtyping__fields_mismatch.snap
---
source: crates/service/tests/diagnostics/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 16
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$b` doesn't match its super type `$a`"
    },
    {
      "range": {
        "start": {
          "line": 10,
          "character": 16
        },
        "end": {
          "line": 10,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$d` doesn't match its super type `$c`"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 16
        },
        "end": {
          "line": 14,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$f` doesn't match its super type `$e`"
    },
    {
      "range": {
        "start": {
          "line": 18,
          "character": 16
        },
        "end": {
          "line": 18,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$h` doesn't match its super type `$g`"
    }
  ]
}
