crates/service/tests/diagnostics/snapshots/features__diagnostics__subtyping__idx.snap
---
source: crates/service/tests/diagnostics/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 16
        },
        "end": {
          "line": 5,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "typeidx of super type `$a` must be smaller than type `$z`"
    },
    {
      "range": {
        "start": {
          "line": 2,
          "character": 13
        },
        "end": {
          "line": 2,
          "character": 14
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "typeidx of super type `1` must be smaller than type `0`"
    }
  ]
}
