crates/service/tests/diagnostics/snapshots/features__diagnostics__subtyping__implicit_final.snap
---
source: crates/service/tests/diagnostics/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 16
        },
        "end": {
          "line": 3,
          "character": 18
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$t` is final"
    }
  ]
}
