crates/service/tests/diagnostics/snapshots/features__diagnostics__subtyping__sub_type_mismatch.snap
---
source: crates/service/tests/diagnostics/subtyping.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 17
        },
        "end": {
          "line": 3,
          "character": 20
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$s0` doesn't match its super type `$a0`"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 17
        },
        "end": {
          "line": 6,
          "character": 20
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$s1` doesn't match its super type `$f1`"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 17
        },
        "end": {
          "line": 9,
          "character": 20
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$a2` doesn't match its super type `$s2`"
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 17
        },
        "end": {
          "line": 12,
          "character": 20
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$a3` doesn't match its super type `$f3`"
    },
    {
      "range": {
        "start": {
          "line": 15,
          "character": 17
        },
        "end": {
          "line": 15,
          "character": 20
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$f4` doesn't match its super type `$s4`"
    },
    {
      "range": {
        "start": {
          "line": 18,
          "character": 17
        },
        "end": {
          "line": 18,
          "character": 20
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$f5` doesn't match its super type `$a5`"
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 18
        },
        "end": {
          "line": 21,
          "character": 21
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$a6'` doesn't match its super type `$a6`"
    },
    {
      "range": {
        "start": {
          "line": 24,
          "character": 18
        },
        "end": {
          "line": 24,
          "character": 21
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$s7'` doesn't match its super type `$s7`"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 18
        },
        "end": {
          "line": 27,
          "character": 21
        }
      },
      "severity": 1,
      "code": "subtyping",
      "source": "wat",
      "message": "type `$f8'` doesn't match its super type `$f8`"
    }
  ]
}
